commit before merging

--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -30,7 +30,18 @@
 
 
 
-/* Questions and Answers */
+
+
+
+
+
+
+
+
+/************ Questions and Answers ************/
+
+/*** QandAList ***/
+
 .QA-questionInfo {
   margin-right: 20px;
 }
