Adds basic flexbox styling

--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -1,5 +1,12 @@
 /* PRODUCT OVERVIEW STYLES */
 
+/* product-overview container */
+
+.product-overview {
+  display: flex;
+  justify-content: space-evenly;
+}
+
 /* review stars */
 
 .star-outline {
