--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -24,33 +24,48 @@
 
 
 
-
-
-
-
-
-
-
-
 /************ Questions and Answers ************/
 
+/*** QandA ***/
+
+#QA-column {
+  display: inline-block;
+}
+
+
+
+/*** SearchBar ***/
+.searchInput {
+  width: 200px;
+}
 /*** QandAList ***/
 
-.QA-helpful-text {
-  margin-left: 8px;
-  margin-right: 8px
-}
 
 .QA-questionInfo {
   margin-right: 20px;
 }
 
 .QA-yes {
-  margin-left: 8px
+  text-decoration: underline;
+}
+
+.QA-helpful-text {
+  margin-left: 100px;
+  margin-right: 8px;
+}
+
+.QA-addAnswer {
+  margin-left: 8px;
+  text-decoration: underline;
+}
+
+.QA-4in1 {
+  float: right;
 }
 
 .QA-img {
   padding: 5px;
   width: 150px;
 }
+
 
