--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -1,3 +1,6 @@
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 /* PRODUCT OVERVIEW STYLES */
 
@@ -5,11 +8,19 @@
 
 .product-overview {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 
 .product-description {
   width: 520px;
+}
+
+.product-information {
+  display: flex;
+  flex-direction: column;
+  align-content: flex-start;
+  justify-content: space-between;
+  margin-left: 30px;
 }
 
 /* price */
@@ -41,6 +52,44 @@
   display: inline-block;
 }
 
+/* styles */
+
+.style-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 450px;
+}
+
+.style-thumbnail {
+  object-fit: cover;
+  object-position: center;
+  height: 85px;
+  width: 85px;
+  border-radius: 50%;
+  padding: 10px;
+}
+
+/* image view */
+
+.image-gallery {
+  flex-grow: 1;
+  width: 500px;
+  height: 500px;
+  max-height: 80vh;
+  max-width: 80vh;
+  min-width: 80vh;
+}
+
+.image-default-view {
+  width: 100%;
+  height: 100%;
+}
+
+.image-default-view img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 
 
