--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -61,12 +61,38 @@
 }
 
 .style-thumbnail {
+  display: block;
   object-fit: cover;
   object-position: center;
   height: 85px;
   width: 85px;
   border-radius: 50%;
-  padding: 10px;
+  margin: 10px;
+}
+
+.style-thumbnail:hover {
+  cursor: pointer;
+}
+
+.thumbnail-container {
+  position: relative;
+}
+
+.selected-check {
+  position: absolute;
+  color: white;
+  background-color: rgb(49, 138, 255);
+  text-align: center;
+  width: 19px;
+  border-radius: 60%;
+  top: 0;
+  right: 0;
+  margin-right: 15px;
+  margin-top: 10px;
+}
+
+.selected-style {
+  box-shadow: 0 0 0 5px rgb(132, 210, 206);
 }
 
 /* image view */
