--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -12,6 +12,14 @@
 
 /* product-overview container */
 
+#logo {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  margin-left: -35px;
+  margin-top: -35px;
+}
+
 .product-overview {
   display: flex;
   justify-content: center;
