--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -16,8 +16,7 @@
   position: relative;
   width: 200px;
   height: 200px;
-  margin-left: -35px;
-  margin-top: -35px;
+  margin: -35px 0 -30px -35px;
 }
 
 .product-overview {
@@ -97,7 +96,7 @@
   color: white;
   background-color: rgb(49, 138, 255);
   text-align: center;
-  width: 19px;
+  width: 20px;
   border-radius: 60%;
   top: 0;
   right: 0;
