Finished major related product info

--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -2,10 +2,21 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.title {
+  text-align: center;
+}
+
+/* RELATED PRODUCT STYLES */
+
 #related {
-  /* display: flex;
-  flex-direction: column; */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
   border: 2px solid black;
+}
+
+#items {
+  width: auto;
 }
 
 /* PRODUCT OVERVIEW STYLES */
