Finished basic related product cards

--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -15,10 +15,15 @@
 }
 
 #items {
-  width: 22%;
-  height: 260px;
+  width: 23%;
+  height: 450px;
   border: 1px solid black;
   text-align: center;
+}
+
+#items > img {
+  width: 100%;
+  height: 55%;
 }
 
 /* PRODUCT OVERVIEW STYLES */
