--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -25,7 +25,11 @@
 }
 
 .product-description {
-  width: 520px;
+  display: flex;
+  width: 100%;
+  height: 185px;
+  margin-top: 50px;
+  padding-left: 25px;
 }
 
 .product-information {
@@ -34,6 +38,16 @@
   align-content: flex-start;
   justify-content: space-between;
   margin-left: 30px;
+}
+
+.description-container {
+  width: 55%;
+  padding-right: 85px;
+  border-right: 1px solid black;
+}
+
+.features {
+  padding-left: 85px;
 }
 
 /* price */
@@ -63,6 +77,10 @@
   height: 36px;
   width: 31px;
   display: inline-block;
+}
+
+.review-link {
+  padding-left: 10px;
 }
 
 /* styles */
@@ -136,7 +154,12 @@
   margin: 10px;
   width: 135px;
   height: 45px;
-  text-align: center;
+  text-align: left;
+  padding-left: 10px;
+}
+
+.size-selector {
+  width: 200px;
 }
 
 .add-to-cart {
