Added star button

--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -21,9 +21,24 @@
   text-align: center;
 }
 
-#items > img {
+#items > #thumbnail {
   width: 100%;
   height: 55%;
+}
+
+#items > p {
+  margin-top: 0px;
+}
+
+.star-button {
+  position: relative;
+  height: 30px;
+  width: 30px;
+  z-index: 1;
+  top: -240px;
+  left: 85px;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
 }
 
 /* PRODUCT OVERVIEW STYLES */
