--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -44,7 +44,31 @@
 }
 
 #star-button:hover {
-  filter: drop-shadow(2px 2px 2px white);
+  filter: drop-shadow(2px 2px 2px yellow);
+}
+
+#modal {
+  position: fixed;
+  left: 25%;
+  top: 25%;
+  right: 0;
+  bottom: 0;
+  height: 50%;
+  width: 60%;
+  background-color: white;
+  border: solid 1px black;
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
+  z-index: 3;
+}
+
+#exit-button {
+  position: relative;
+  bottom: 15%;
+  left: 45%;
+  height: 8%;
+  width: 5%;
 }
 
 /* PRODUCT OVERVIEW STYLES */
