--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -55,15 +55,16 @@
 .product-overview {
   display: flex;
   justify-content: center;
-  height: 550px;
+  height: 670px;
 }
 
-.product-description {
+.description-container {
   display: flex;
   width: 100%;
   height: 185px;
   margin-top: 50px;
   padding-left: 25px;
+  justify-content: center;
 }
 
 .product-information {
@@ -74,14 +75,28 @@
   margin-left: 30px;
 }
 
-.description-container {
-  width: 55%;
-  padding-right: 85px;
-  border-right: 1px solid black;
+.product-information .product-title {
+  font-size: 1.7em;
+  line-height: 0.1;
+}
+
+.product-information .product-category {
+  font-size: 1.2em;
+}
+
+.product-information .product-price {
+  font-weight: bold;
+}
+
+.product-description {
+  width: 52%;
+  padding-right: 45px;
+  border-right: 1.5px solid black;
 }
 
 .features {
-  padding-left: 85px;
+  padding-left: 45px;
+  width: 400px;
 }
 
 /* price */
@@ -137,6 +152,7 @@
 
 .style-thumbnail:hover {
   cursor: pointer;
+  opacity: 0.6;
 }
 
 .thumbnail-container {
@@ -167,11 +183,10 @@
   width: 80%;
   max-width: 1000px;
   height: 100%;
-  background-color: lightgray
+  background-color: lightgray;
 }
 
 .image-default-view {
-  width: 100%;
   height: 100%;
 }
 
@@ -204,6 +219,7 @@
 
 .style-carousel img:hover {
   cursor: pointer;
+  opacity: 0.7;
 }
 
 
@@ -228,7 +244,7 @@
 
 .add-to-cart {
   margin-right: 10px;
-  margin-left: 10px;
+  margin-left: 15px;
   background-color: white;
   padding: 15px 10px 15px 10px;
   border: 1px solid rgb(79, 79, 79);
