--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -15,9 +15,11 @@
 }
 
 .items {
+  display: flex;
+  flex-direction: column;
   width: 23%;
   height: 450px;
-  box-shadow: 5px 10px 18px #888888;
+  box-shadow: 8px 10px 18px #888888;
   text-align: center;
 }
 
@@ -35,16 +37,15 @@
   height: 30px;
   width: 30px;
   z-index: 1;
-  top: -50%;
-  left: 33%;
+  top: -53%;
+  left: 88%;
   padding-bottom: 0px;
   margin-bottom: 0px;
-  filter: drop-shadow(2px 2px 2px black);
   transition: filter .5s;
 }
 
 .star-button:hover {
-  filter: drop-shadow(2px 2px 2px yellow);
+  filter: drop-shadow(2px 2px 2px black);
 }
 
 #modal {
@@ -73,7 +74,7 @@
 #exit-button {
   position: fixed;
   bottom: 70%;
-  left: 70%;
+  left: 62%;
   height: 4%;
   width: 2.5%;
 }
@@ -85,9 +86,14 @@
 }
 
 #productOne, #productTwo {
-  width: 50%;
+  width: 48%;
 }
 
+#productTwo {
+  padding-right: 10px;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+}
 .break {
   height: 0%;
   flex-basis: 100%;
