Research how to do carousel

--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -155,7 +155,7 @@
   border-right: 1.5px solid black;
 }
 
-.features {
+.description-features {
   padding-left: 45px;
   width: 400px;
 }
@@ -283,13 +283,36 @@
   cursor: pointer;
 }
 
+.up-arrow {
+  position: absolute;
+  height: 45px;
+  width: 45px;
+  left: 23px;
+  top: 20px;
+}
+
+.up-arrow:hover {
+  cursor: pointer;
+}
+
+.down-arrow {
+  position: absolute;
+  height: 45px;
+  width: 45px;
+  left: 23px;
+  top: 485px;
+}
+
+.down-arrow:hover {
+  cursor: pointer;
+}
 
 .style-carousel {
   position: absolute;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  margin-top: 15px;
+  margin-top: 65px;
   margin-left: 15px;
 }
 
