--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -23,6 +23,33 @@
   text-align: center;
 }
 
+.prev, .next {
+  width: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  cursor: pointer;
+  font-size: 48px;
+  transition: 0.3s ease;
+  user-select: none;
+}
+
+.prev {
+  margin-left: -15px;
+  padding: 10px;
+  margin-right: -8px;
+}
+
+.next {
+  margin-left: -8px;
+  padding: 10px;
+  margin-right: -15px;
+}
+
+.prev:hover, .next:hover {
+  color: white;
+  background-color: rgba(0,0,0,0.5);
+}
+
 .items > .thumbnail {
   width: 100%;
   height: 55%;
