--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -8,18 +8,29 @@
 
 /* RELATED PRODUCT STYLES */
 
-#related {
+.related-carousel {
+  width: 98%;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: start;
+  right: 10px;
+  min-width: 99%;
+}
+
+.related-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .items {
   display: flex;
+  margin-right: 8px;
+  margin-left: 9px;
   flex-direction: column;
   width: 23%;
   height: 450px;
-  box-shadow: 8px 10px 18px #888888;
+  box-shadow: 8px 10px 18px #b4b4b4;
   text-align: center;
 }
 
@@ -36,13 +47,13 @@
 .prev {
   margin-left: -15px;
   padding: 10px;
-  margin-right: -8px;
+  margin-right: -8.5px;
 }
 
 .next {
-  margin-left: -8px;
+  margin-left: -59px;
   padding: 10px;
-  margin-right: -15px;
+  /* margin-right: -15px; */
 }
 
 .prev:hover, .next:hover {
