--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -17,11 +17,11 @@
   min-width: 99%;
 }
 
-.related-container {
+/* .related-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
-}
+} */
 
 .items {
   display: flex;
@@ -47,13 +47,13 @@
 .prev {
   margin-left: -15px;
   padding: 10px;
-  margin-right: -8.5px;
+  margin-right: -8px;
 }
 
 .next {
-  margin-left: -59px;
+  margin-left: -8px;
   padding: 10px;
-  /* margin-right: -15px; */
+  margin-right: -15px;
 }
 
 .prev:hover, .next:hover {
