--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -293,23 +293,45 @@
 .expanded-view {
   position: relative;
   width: 100%;
+  height: 670px;
   background-color: lightgray;
   margin-right: 15px;
 }
 
+.image-expanded-view {
+  height: 100%;
+}
 
 .image-default-view {
   height: 100%;
 }
 
-.main-img:hover {
-  cursor: zoom-in;
-}
-
-.main-img {
+.main-img.default {
   width: 100%;
   height: 100%;
   object-fit: contain;
+}
+
+.main-img.expanded {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.main-img.expanded:hover {
+  cursor: crosshair;
+}
+
+.full-screen-btn {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  height: 25px;
+  width: 25px;
+}
+
+.full-screen-btn:hover {
+  cursor: pointer;
 }
 
 .left-arrow {
@@ -370,7 +392,7 @@
 }
 
 .carousel-selected {
-  box-shadow: 0 0 0 2px black;
+  box-shadow: 0 0 0 3px rgb(255, 255, 255);
 }
 
 .style-carousel img {
