commit after OH with Bonnie and before changing as Bonnie suggested :)

--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -600,4 +600,32 @@
 }
 
 
+.QA-searchBar {
+  display: flex;
+  padding: 30px;
+  margin-top: -3em;
+  margin-bottom: -1em;
+  /* justify-content: center; */
+
+}
+
+.searchbartitle {
+  display:block;
+  position: relative;
+  font-size: .6em;
+  /* margin-top: 3em; */
+  margin-top: -3em;
+  margin-bottom: -1em;
+  font-family: sans-serif;
+}
+
+.QA-searchField {
+  display: inline-flex;
+  width: 60em;
+  height: 2em;
+  outline: black;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
 
