--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -408,15 +408,20 @@
 }
 
 /* zoom modal */
-
-.zoom-modal {
+.test h1 {
   position: absolute;
 }
 
-.zoom-modal img {
+.zoom-modal {
+  position: absolute;
   border: 2px solid white;
+  overflow: hidden;
   height: 190px;
   width: 300px;
+}
+
+.zoom-modal img {
+  transform: scale(2.5);
 }
 
 
