complete PUT so now if you refresh the page, the update number won't go back to the original number

--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -491,6 +491,17 @@
   color:blueviolet
 }
 
+.QA-question {
+  /* width: 32em; */
+  display:flex;
+  /* flex-wrap: wrap; */
+  flex-grow: 1;
+  word-break: break-all;
+  /* margin-top: 2.3em;
+  margin-bottom: -5em; */
+  font-size: 1.6em;
+}
+
 
 
 
