--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -8,7 +8,7 @@
 
 /* RELATED PRODUCT STYLES */
 
-.related-carousel {
+.related-carousel, .related-outfit {
   width: 98%;
   display: flex;
   flex-direction: row;
@@ -78,6 +78,12 @@
 
 .star-button:hover {
   filter: drop-shadow(2px 2px 2px black);
+}
+
+.plusSign {
+  margin: auto;
+  height: 15%;
+  width: 30%;
 }
 
 #modal {
