Working on zoom feature

--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -408,6 +408,11 @@
 }
 
 /* zoom modal */
+
+.test-modal h1 {
+  position: absolute;
+}
+
 .zoom-modal {
   position: absolute;
   border: 2px solid white;
@@ -416,7 +421,7 @@
   width: 300px;
 }
 
-.zoom-modal img {
+.zoom-modal-img {
   transform: scale(2.5);
 }
 
@@ -444,16 +449,18 @@
 .add-to-cart {
   margin-right: 10px;
   margin-left: 15px;
-  background-color: white;
+  background-color: rgb(255, 55, 55);
+  color: white;
   padding: 15px 10px 15px 10px;
   border: 1px solid rgb(79, 79, 79);
-  width: 135px;
+  width: 294px;
   border-radius: 4%;
   font-size: 15.5px;
 }
 
 .add-to-cart:hover {
   cursor: pointer;
+  background-color: rgb(242, 94, 94);
 }
 
 .size-guard {
@@ -462,7 +469,7 @@
   margin-top: 0px;
   top: 5px;
   left: 16px;
-  color: red;
+  color: rgb(255, 0, 0);
 }
 
 .add-to-outfit {
@@ -478,6 +485,7 @@
 
 .add-to-outfit:hover {
   cursor: pointer;
+  background-color: rgb(218, 218, 218);
 }
 
 
