--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -2,6 +2,11 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+/* #app {
+  height: 100%;
+  width: 100%;
+} */
+
 .title {
   text-align: center;
 }
@@ -144,6 +149,9 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+
+
 /* PRODUCT OVERVIEW STYLES */
 
 /* product-overview container */
@@ -501,20 +509,60 @@
 
 
 
-/************ Questions and Answers ************/
+
+
+
+
+
+
+
+
+/************ Q & A STYLES************/
 
 /*** QandA ***/
+
+.QA-answerBody {
+  margin-left: .3em;
+  font-size: 20px;
+  font-family: sans-serif;
+}
+
+.QA-answerPhotos {
+  margin-left: .3em;
+}
+
+.QA-questionInfo-Combination {
+  margin-left: .3em;
+  font-family: sans-serif;
+  font-size: 15px;
+}
+
+.QA-eachAnswer {
+  margin-bottom: .7em;
+  font-family: sans-serif;
+}
 
 #QA-column {
   display: inline-block;
 }
 
-/*** SearchBar ***/
-.searchInput {
-  width: 200px;
-}
 /*** QandAList ***/
+.QA-Q {
+  display: flex;
+  width: 100%;
+  border: none;
+}
 
+.QA-A {
+  display: flex;
+  width: 100%;
+  font-size: 20px;
+  border: none;
+}
+
+.QA-A-letterA {
+  font-weight: bold;
+}
 
 .QA-questionInfo {
   margin-right: 8px;
@@ -540,6 +588,7 @@
 
 .QA-4in1 {
   float: right;
+  font-size: 16px;
 }
 
 .QA-img {
@@ -555,18 +604,12 @@
 }
 
 .QA-question {
-  /* width: 32em; */
+  font-size: 20px;
   display:flex;
-  /* flex-wrap: wrap; */
   flex-grow: 1;
   word-break: break-all;
-  /* margin-top: 2.3em;
-  margin-bottom: -5em; */
-  font-size: 1.6em;
+  font-weight: bold;
 }
-
-
-
 
 
 
@@ -581,15 +624,6 @@
   margin-left: auto;
   z-index:2;
 }
-
-/* .QA-modalBackground {
-  width: 100vw;
-  height: 100vh;
-  background-color: rgb(50, 132, 164);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-} */
 
 .QA-modalContainer {
   width: 600px;
@@ -622,7 +656,6 @@
 
 .QA-modalContainer .QA-modalBody {
   flex: 50%;
-  /* display: flex; */
   justify-content: center;
   align-items: center;
   font-size: 0.8rem;
@@ -676,30 +709,74 @@
 
 .QA-searchBar {
   display: flex;
-  padding: 30px;
-  margin-top: -3em;
-  margin-bottom: -1em;
-  /* justify-content: center; */
-
+  margin-top: 1em;
+  margin-left: 0px;
+  margin-bottom: 3em;
 }
 
-.searchbartitle {
-  display:block;
-  position: relative;
-  font-size: .6em;
-  /* margin-top: 3em; */
-  margin-top: -3em;
-  margin-bottom: -1em;
+.QA-title {
   font-family: sans-serif;
+  width: 100%;
+  margin-left: 0px;
+  font-size: 18px;
 }
 
 .QA-searchField {
   display: inline-flex;
-  width: 60em;
-  height: 2em;
+  width: 105em;
+  height: 3em;
   outline: black;
   border-radius: 5px;
   cursor: pointer;
+  font-weight: bold;
 }
 
 
+.QA-QandAElement {
+  margin-bottom: 20px
+}
+
+#QA-QandAList-overflowTest {
+  /* background: #ffffff; */
+  color: rgb(0, 0, 0);
+  padding: 15px;
+  width: 87em;
+  height: 500px;
+  overflow: auto;
+  border: 1px solid #ccc;
+}
+
+#QA-answerList-overflowTest {
+  color: rgb(0, 0, 0);
+  padding: 10px;
+  width: 60em;
+  height: 230px;
+  overflow: auto;
+  /* border: 1px solid rgb(205, 17, 212); */
+}
+
+
+.QA-container {
+  /* margin: 20 auto;
+  width: 100% */
+  /* margin: auto; */
+  margin-left: 20;
+  width: 100em;
+  /* border: 3px solid #73AD21;
+  padding: 10px; */
+}
+
+.QA-Modal2-thumbnail {
+  margin: 2
+}
+
+.openModal1 {
+  height: 100px;
+  /* width: 100px */
+}
+
+.loadQuestionsButton {
+  height: 100px;
+  /* width: 100px; */
+  margin-right: 20px
+}
