--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -70,18 +70,31 @@
   width: 30px;
   z-index: 1;
   top: -53%;
-  left: 88%;
+  left: 85%;
   padding-bottom: 0px;
   margin-bottom: 0px;
   transition: filter .5s;
 }
 
-.star-button:hover {
+.delete-button {
+  position: relative;
+  height: 30px;
+  width: 30px;
+  z-index: 1;
+  top: -53%;
+  left: 83%;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+  transition: filter .5s;
+}
+
+.star-button:hover, .delete-button:hover {
   filter: drop-shadow(2px 2px 2px black);
 }
 
 .plusSign {
-  margin: auto;
+  margin-right: auto;
+  margin-left: auto;
   height: 15%;
   width: 30%;
 }
@@ -115,6 +128,10 @@
   left: 62%;
   height: 4%;
   width: 2.5%;
+}
+
+#add {
+  margin-top: 60%;
 }
 
 #productCompare {
