--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -757,13 +757,12 @@
 
 
 .QA-container {
-  /* margin: 20 auto;
-  width: 100% */
   /* margin: auto; */
   margin-left: 20;
-  width: 100em;
-  /* border: 3px solid #73AD21;
-  padding: 10px; */
+  /* width: 100em; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .QA-Modal2-thumbnail {
@@ -779,4 +778,8 @@
   height: 100px;
   /* width: 100px; */
   margin-right: 20px
+}
+
+.QA-two-buttons{
+  margin-top: 20px;
 }
