--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -27,6 +27,7 @@
   margin-right: 8px;
   margin-left: 9px;
   flex-direction: column;
+  justify-content: start;
   width: 23%;
   height: 450px;
   box-shadow: 8px 10px 18px #b4b4b4;
@@ -70,7 +71,8 @@
 }
 
 .items > p {
-  margin-top: 0px;
+  margin: 0;
+  padding: 2%;
 }
 
 .star-button {
