--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -149,6 +149,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  padding-left: 5%;
 }
 
 #productOne, #productTwo {
@@ -165,7 +166,7 @@
 
 .features {
   text-align: center;
-  padding-left: 0 !important;
+  padding-left: 0% !important;
 }
 
 .star-cards {
