--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -29,13 +29,13 @@
   flex-direction: column;
   justify-content: start;
   width: 23%;
-  height: 450px;
+  height: 500px;
   box-shadow: 8px 10px 18px #b4b4b4;
   text-align: center;
 }
 
 .related-outfit > .items {
-  width: 22.5%;
+  width: 23%;
 }
 
 .prev, .next {
@@ -127,7 +127,7 @@
 }
 
 #comparing {
-  text-align: left;
+  text-align: center;
   padding-left: 2%;
   padding-top: 5%;
   margin: 0;
@@ -146,6 +146,7 @@
 }
 
 #productCompare {
+  text-align: center;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -165,6 +166,7 @@
 }
 
 .features {
+  margin: auto;
   text-align: center;
   padding-left: 0% !important;
 }
